--- a/config/config.env
+++ b/config/config.env
@@ -1,5 +1,5 @@
 PORT= 4000
-MONG0DB_URI=mongodb+srv://Raies:raies123@cluster0.ds1bg.mongodb.net/blog-db
+MONGODB_URI=mongodb+srv://Raies:raies123@cluster0.ds1bg.mongodb.net/blog-db
 
 JWT_SECRET_KEY = abcdefghijklmnopqrstuvwxyz
 
